--- a/src/app/advent-calendar/calendar-day/calendar-day.html
+++ b/src/app/advent-calendar/calendar-day/calendar-day.html
@@ -14,6 +14,7 @@
       <div class="number" [ngClass]="{'white-number': isWhite}">
         {{ dayNumber }}
       </div>
+
       @if(!isMissed) {
 
         @if(countdown() != '00:00:00') {
@@ -58,8 +59,17 @@
 
         } @else {
           <img src="advent-calendar/button.png" class="button-image" (click)="hasSauce.set(true)"/>
-          <img class="vinted-item-image" [src]="firstItemImage" [alt]="firstItem?.title || 'Vinted item'" loading="lazy" />
+          <img class="vinted-item-image" [src]="firstItemUrl" [alt]="firstItem?.title || 'Vinted item'" loading="lazy" />
+
           <div class="vinted-item-details">
+            <div class="sold">
+              @if(vintedItems[0].isSold) {
+                <div class="sold-overlay1">
+
+                  <div class="sold-text1">Sprzedane</div>
+                </div>
+              }
+            </div>
             <p class="vinted-item-title">{{ firstItem?.title }}</p>
             <p class="vinted-item-size">{{ firstItem?.size }} {{firstItem?.description}}</p>
             <p class="vinted-item-price-ship">
