+ new bg for days

--- a/src/app/welcome-screen/welcome-screen.html
+++ b/src/app/welcome-screen/welcome-screen.html
@@ -35,7 +35,7 @@
       }
       <button type="submit" class="primary-button">
         <img src="button/magic-link.svg" alt="Magic Link Icon" class="button-icon"/>
-        Wyślij magic link do logowania</button>
+        Wyślij magic link do logowaniaff</button>
     </form>
   </div>
 </div>
