--- a/src/app/welcome-screen/welcome-screen.html
+++ b/src/app/welcome-screen/welcome-screen.html
@@ -3,12 +3,10 @@
   <img src="welcome-screen/sosik.png" alt="Sosik" class="sosik"/>
   <img src="welcome-screen/clothes.png" alt="Clothes" class="clothes"/>
   <div class="form">
-    <img src="welcome-screen/christmas.png" alt="Christmas Decoration" class="decoration"/>
+<!--    <img src="welcome-screen/christmas.png" alt="Christmas Decoration" class="decoration"/>-->
     <div class="form-header">
       <h3>¡hola!</h3>
-      <p>jaaak miło, że tu jesteś 😌
-        kalendarz adwentowy
-        vinted już czeka, wbijaj</p>
+      <p>jaaak miło, że tu jesteś 😌</p>
     </div>
 
     <!-- Email capture form -->
