--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -3,4 +3,5 @@ $background-gradient: var(--bck-mayo, linear-gradient(349deg, #FFECBC 35.11%, #F
 $primary-color: #F77710;
 $font-default-color: #1E1E1E;
 $font-primary-color: #063DBF;
+$font-white: #F5F5F5;
 $error-color: #900B09;
