--- a/src/app/master-classes/landing-page/landing-page.html
+++ b/src/app/master-classes/landing-page/landing-page.html
@@ -1,14 +1,6 @@
 <div class="landing-page">
-  <div class="logo">
-    <img src="logo.svg" alt="App Logo">
-  </div>
-  <div class="header">
-    <div class="masterclass-logo">
-      <img src="blue-logo-sign.svg">
-      <h1 class="title">Masterclass</h1>
-    </div>
-    <p class="subtitle">Jak szukać na vinted, żeby znaleźć.</p>
-  </div>
+  <app-mc-header></app-mc-header>
+
 
   <div class="cover-holder">
     <div class="timer">
