--- a/src/app/master-classes/success/success.scss
+++ b/src/app/master-classes/success/success.scss
@@ -45,6 +45,21 @@
       font-size: 0.875rem;
       line-height: 1.6;
       margin: 0 0 2rem;
+
+      .loader {
+        display: inline-block;
+        width: 1em;
+        height: 1em;
+        border: 2px solid $font-default-color;
+        border-top-color: transparent;
+        border-radius: 50%;
+        animation: spin 0.6s linear infinite;
+        vertical-align: middle;
+      }
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
     }
 
     .thanks {
