--- a/src/app/master-classes/video-player/video-player.html
+++ b/src/app/master-classes/video-player/video-player.html
@@ -6,7 +6,7 @@
       [src]="safeVideoUrl"
       loading="lazy"
       style="border:none;position:absolute;top:0;height:100%;width:100%;"
-      allow="accelerometer;gyroscope;encrypted-media;picture-in-picture;"
+      allow="accelerometer;gyroscope;encrypted-media;picture-in-picture;fullscreen"
       allowfullscreen>
     </iframe>
 
